# ai

./: Dockerfile  docker-compose.coolify.yaml  docker-compose.prod.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: test.yaml
app/: database.py  main.py  models.py  routers.py  schemas.py  services.py  settings.py
migrations/: env.py
migrations/versions/: 8f206ea4f61e_create_user_and_project_tables.py  ae9cc7c247ce_create_user_table.py
tests/: test_main.py
